; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_pmeth_lib.c_legacy_ctrl_to_param.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_pmeth_lib.c_legacy_ctrl_to_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32, i8*)* @legacy_ctrl_to_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @legacy_ctrl_to_param(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %14 = load i32, i32* %11, align 4
  switch i32 %14, label %27 [
    i32 130, label %15
    i32 128, label %19
    i32 129, label %23
  ]

15:                                               ; preds = %6
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* %12, align 4
  %18 = call i32 @EVP_PKEY_CTX_set_dh_pad(i32* %16, i32 %17)
  store i32 %18, i32* %7, align 4
  br label %28

19:                                               ; preds = %6
  %20 = load i32*, i32** %8, align 8
  %21 = load i8*, i8** %13, align 8
  %22 = call i32 @EVP_PKEY_CTX_set_signature_md(i32* %20, i8* %21)
  store i32 %22, i32* %7, align 4
  br label %28

23:                                               ; preds = %6
  %24 = load i32*, i32** %8, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = call i32 @EVP_PKEY_CTX_get_signature_md(i32* %24, i8* %25)
  store i32 %26, i32* %7, align 4
  br label %28

27:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %28

28:                                               ; preds = %27, %23, %19, %15
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i32 @EVP_PKEY_CTX_set_dh_pad(i32*, i32) #1

declare dso_local i32 @EVP_PKEY_CTX_set_signature_md(i32*, i8*) #1

declare dso_local i32 @EVP_PKEY_CTX_get_signature_md(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
